feat: Implement Analysis Overview and Graph Viewer components
- Added AnalysisOverview component for displaying analysis results, including statistics and detailed findings.
- Integrated collapsible sections for different analysis types (Reconnaissance, API Security, etc.).
- Created GraphViewerPage component for visualizing the Code Knowledge Graph with filtering and search capabilities.
- Established routes for scan metrics and vulnerabilities in the backend, allowing for the creation and retrieval of scan-related data.
- Implemented database service for saving analysis results and managing projects and scans.
- Configured TypeScript settings for the server to ensure type safety and proper module resolution.

--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:server": "node server/api-enhanced.js",
-    "dev:server:old": "node server/api.js",
+    "dev:server": "cd server && npm run dev",
+    "dev:server:old": "node server/api-enhanced.js",
     "dev:all": "concurrently \"npm run dev\" \"npm run dev:server\"",
     "build": "vite build",
+    "build:server": "cd server && npm run build",
     "preview": "vite preview",
-    "db:generate": "prisma generate",
+    "db:generate": "npx prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
@@ -22,6 +23,7 @@
     "@babel/traverse": "^7.28.4",
     "@babel/types": "^7.28.4",
     "@google/genai": "^1.20.0",
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^5.9.1",
     "@types/jszip": "^3.4.0",
     "axios": "^1.6.7",
